# Rickware

./: CMakeLists.txt  README.md  RickExecute.cpp  Rickware.cpp  Victim.cpp
